# bornhack-website

./: .env_template  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  dev.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements3.txt
.github/: dependabot.yml
.github/workflow/: ci.yml
.github/workflows/: irc.yml  main.yml  pre-commit.yml
bornhack/: .env.dist  settings.py  urls.py  utils.py  wsgi.py
bornhack/settings/: .env.dist  base.py  development.py  env.dist  production.py
bornhack/templates/: 404.html  base.html  coc.html  contact.html  frontpage.html  good_to_know.html  info.html  speakers.html  sponsors.html
camps/: admin.py  context_processors.py  managers.py  mixins.py  models.py  views.py
camps/migrations/: 0005_auto_20160510_2011.py  0007_auto_20161212_1803.py  0008_delete_day.py  0009_auto_20161220_1645.py  0011_auto_20161228_1750.py  0012_auto_20161228_2312.py  0013_auto_20161229_2201.py  0014_auto_20161229_2202.py  0017_remove_camp_description.py  0018_auto_20170128_1841.py
camps/templates/: bornhack-2016_camp_detail.html  camp_detail.html  camp_detail_bornhack-2017.html  camp_list.html
docker/: .env.dev  Dockerfile  docker-compose.yml
docker/postgis_container/: 00-create-extensions.sh  Dockerfile
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
info/: admin.py  models.py  views.py
info/templates/: info.html
ircbot/: models.py
ircbot/migrations/: 0001_initial.py
news/: admin.py  managers.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0005_auto_20160618_1902.py  0006_remove_newsitem_public.py
news/templates/: news_detail.html  news_index.html
profiles/: forms.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
program/: __init__.py  admin.py  apps.py  models.py  signal_handlers.py  urls.py  views.py
program/migrations/: 0001_initial.py  0003_eventtype_light_writing.py  0004_auto_20160804_1712.py  0008_auto_20160808_1747.py  0012_auto_20161229_2150.py  0014_speaker_camp.py  0015_auto_20170128_1841.py
program/templates/: bornhack-2017_call_for_speakers.html  event_list.html  program.html  program_base.html  program_day.html  program_event_detail.html  program_overview.html  schedule_base.html  speaker_detail.html  speaker_list.html
requirements/: base.txt  development.txt
schedule/: Dockerfile  Main.elm  Makefile  elm-package.json  elm.json
schedule/src/: Decoders.elm  Main.elm  Messages.elm  Models.elm  Routing.elm  Update.elm  Views.elm  WebSocketCalls.elm
scripts/: schemagif.sh  thumbnail.sh
shop/: admin.py  context_processors.py  email.py  epay.py  forms.py  managers.py  models.py  pdf.py  urls.py  utils.py  views.py
shop/migrations/: 0002_orderproductrelation_handed_out.py  0004_auto_20160515_1604.py  0006_ensure_slugs.py  0007_auto_20160515_2157.py  0011_auto_20160517_1902.py  0015_coinifyapiinvoice_coinifycallback.py  0016_auto_20160529_1122.py  0018_auto_20160529_1736.py  0019_invoice_pdf_generated.py  0020_auto_20160530_1824.py  0022_auto_20160530_2301.py  0023_order_cancelled.py  0025_creditnote.py  0030_auto_20160827_0752.py  0033_auto_20161212_1756.py
shop/templates/: bank_transfer.html  cash.html  checkout.html  epay_form.html  epay_thanks.html  invoice.html  order_detail.html  order_list.html  product_detail.html  shop_base.html  shop_index.html  ticket_detail.html  ticket_list.html
shop/templatetags/: shop_tags.py
sponsors/: views.py
sponsors/templates/: bornhack-2016-sponsors.html  bornhack-2017-call-for-sponsors.html
src/: .coverage  conftest.py  manage.py  oauth.py  requirements.txt
src/.ropeproject/: config.py  globalnames
src/autoscheduler/: admin.py  apps.py  models.py  scheduler.py  utils.py
src/backoffice/: apps.py  forms.py  mixins.py  urls.py  views.py
src/bar/: admin.py  apps.py  models.py  views.py
src/bornhack/: .env.dist  admin.py  allauth.py  asgi.py  dev_environment_settings.py  environment_settings.py  environment_settings.py.dist  environment_settings.py.dist.dev  forms.py  oauth_validators.py  routing.py  schema.py  settings.py  urls.py  wsgi.py
src/camps/: admin.py  context_processors.py  factories.py  middleware.py  mixins.py  models.py  tests.py  utils.py  views.py
src/contact/: views.py
src/economy/: admin.py  apps.py  email.py  factories.py  filters.py  forms.py  mixins.py  models.py  tables.py  tests.py  urls.py  utils.py  views.py
src/events/: admin.py  apps.py  factories.py  handler.py  models.py
src/facilities/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
src/feedback/: admin.py  apps.py  models.py  tests.py  views.py
src/info/: admin.py  apps.py  models.py  views.py
src/ircbot/: admin.py  apps.py  irc3module.py  ircworker.py  models.py  utils.py
src/maps/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py  widgets.py
src/news/: admin.py  apps.py  models.py  urls.py  views.py
src/people/: apps.py  views.py
src/phonebook/: __init__.py  admin.py  apps.py  dectutils.py  exceptions.py  forms.py  mixins.py  models.py  urls.py  views.py
src/profiles/: __init__.py  admin.py  apps.py  factories.py  forms.py  models.py  signal_handlers.py  tests.py  urls.py  views.py
src/program/: __init__.py  admin.py  apps.py  autoscheduler.py  consumers.py  email.py  forms.py  ics.py  mixins.py  models.py  multiform.py  notificationworker.py  schema.py  signal_handlers.py  tests.py  urls.py  utils.py  views.py
src/reimbursement/: admin.py  apps.py  models.py  views.py
src/requirements/: dev.txt  production.txt  test.txt
src/rideshare/: admin.py  apps.py  models.py  urls.py  views.py
src/shop/: __init__.py  admin.py  apps.py  coinify.py  (+16 more)
templates/: 2016info.html  base.html  coc.html  frontpage.html  speakers.html  sponsors.html
tickets/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
utils/: models.py
villages/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
(+1476 files in other folders)
